# jobapp

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api-gateway/: Dockerfile.dev  pyproject.toml
apps/api-gateway/app/: main.py
apps/api-gateway/app/core/: config.py  database.py  redis_client.py
apps/api-gateway/app/middleware/: logging.py
apps/api-gateway/app/models/: __init__.py  analytics.py  application.py  automation.py  base.py  job.py  user.py
apps/api-gateway/app/routers/: health.py  users.py
apps/api-gateway/migrations/: 001_initial_schema.sql
apps/web-frontend/: Dockerfile.dev  next.config.js  package.json  vite.config.ts
apps/web-frontend/app/: layout.tsx  page.tsx
apps/web-frontend/app/applications/: page.tsx
apps/web-frontend/app/jobs/: page.tsx
apps/web-frontend/app/login/: page.tsx
apps/web-frontend/app/profile/: page.tsx
apps/web-frontend/app/register/: page.tsx
apps/web-frontend/public/: index.html
apps/web-frontend/src/: App.tsx  main.tsx
apps/web-frontend/src/types/: auth.ts
config/: redis.conf
docs/: cursorRules.md  job-application-system-prd.md  technical-decisions.md
memory-bank/: 00-index.md  01-productVision.md  02-techContext.md  03-systemArchitecture.md  04-systemPatterns.md  05-database.md  06-uidesign.md  07-developmentPlan.md  08-kanban.md  09-changelog.md  10-environment.md  11-ai-interaction-guidelines.md  12-code-snippets.md  13-decisions.md  14-quick-reference.md  15-dev-readiness.md
scripts/: init-db.sql  init-extensions.sql  setup-dev.sh
(+11 files in other folders)
